--- a/package.json
+++ b/package.json
@@ -1,52 +1,26 @@
 {
-  "name": "cdk-drag-scroll-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+  "name": "cdk-drag-scroll",
+  "version": "0.0.6",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cactusoft-ca/cdk-drag-scroll.git"
   },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^9.0.7",
-    "@angular/cdk": "9.1.3",
+  "peerDependencies": {
     "@angular/common": "^9.0.7",
-    "@angular/compiler": "^9.0.7",
     "@angular/core": "^9.0.7",
-    "@angular/forms": "^9.0.7",
-    "@angular/platform-browser": "^9.0.7",
-    "@angular/platform-browser-dynamic": "^9.0.7",
-    "@angular/router": "^9.0.7",
-    "core-js": "^3.6.4",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/cdk": "^9.1.3",
+    "tslib": "^1.10.0"
   },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.7",
-    "@angular-devkit/build-ng-packagr": "~0.900.7",
-    "@angular/cli": "~9.0.7",
-    "@angular/compiler-cli": "^9.0.7",
-    "@angular/language-service": "^9.0.7",
-    "@types/jasmine": "^3.5.10",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "^3.5.0",
-    "jasmine-spec-reporter": "^5.0.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^3.1.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
-    "ng-packagr": "^9.0.0",
-    "protractor": "^5.4.3",
-    "ts-node": "^8.8.1",
-    "tslint": "^6.1.0",
-    "typescript": "~3.7.5"
+  "main": "bundles/cdk-drag-scroll.umd.js",
+  "module": "fesm5/cdk-drag-scroll.js",
+  "es2015": "fesm2015/cdk-drag-scroll.js",
+  "esm5": "esm5/cdk-drag-scroll.js",
+  "esm2015": "esm2015/cdk-drag-scroll.js",
+  "fesm5": "fesm5/cdk-drag-scroll.js",
+  "fesm2015": "fesm2015/cdk-drag-scroll.js",
+  "typings": "cdk-drag-scroll.d.ts",
+  "sideEffects": false,
+  "scripts": {
+    "prepublishOnly": "node --eval \"console.error('ERROR: Trying to publish a package that has been compiled by Ivy. This is not allowed.\\nPlease delete and rebuild the package, without compiling with Ivy, before attempting to publish.\\n')\" && exit 1"
   }
 }
