--- a/angular.json
+++ b/angular.json
@@ -150,13 +150,13 @@
           "options": {
             "tsConfig": "projects/cdk-drag-scroll/tsconfig.lib.json",
             "project": "projects/cdk-drag-scroll/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/cdk-drag-scroll/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -180,5 +180,8 @@
       }
     }
   },
-  "defaultProject": "cdk-drag-scroll-app"
+  "defaultProject": "cdk-drag-scroll-app",
+  "cli": {
+    "analytics": "44c436b1-9d52-4d10-9f22-791f32578260"
+  }
 }
